# kgtk

./: CMakeLists.txt  ChangeLog  README  README.md  TODO  config.h.cmake  kgtk-wrapper.cmake
cmake/: FindMsgfmt.cmake
common/: common.h  connect.h  kgtk.c
gtk2/: CMakeLists.txt  kgtk.c  kgtk2-wrapper.cmake
gtk3/: CMakeLists.txt  kgtk3-wrapper.cmake
kdialogd4/: CMakeLists.txt  kdialogd.cpp  kdialogd.h
kdialogd4/po/: CMakeLists.txt  cs.po  de.po  en_GB.po  fr.po  generate.sh  kdialogd4.pot  pt_BR.po  zh_CN.po
kdialogd5/: CMakeLists.txt  kdialogd.cpp  kdialogd.h
kdialogd5/po/: CMakeLists.txt  de.po  en_GB.po  es.po  fr.po  generate.sh  it.po  pt_BR.po  zh_CN.po
